# data-portal

./: .gitignore  install.bat  pyproject.toml  readme.md  requirements.txt  setup.py
economic_dashboard/: __init__.py  app.py  app0.py  database.py  run.py  utils.py  utils0.py
economic_indicators_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
macro_database/: database.py
scripts/: create_shortcut_linux.py  create_shortcut_windows.py
