[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "economic-indicators-dashboard"
version = "1.0.0"
description = "A Streamlit dashboard for CPI and Balance of Payments data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "streamlit>=1.28.0",
    "oracledb>=1.4.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "openpyxl>=3.0.0"
]

[project.scripts]
chota-data = "economic_dashboard.run:main"

[project.urls]
Homepage = "https://github.com/dominicmwitta/macrodatabase"